--- a/_includes/mathjax.html
+++ b/_includes/mathjax.html
@@ -1,5 +1,5 @@
 <script async src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+<script id="MathJax-script" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js"></script>
 
 <script type="text/x-mathjax-config">
 MathJax.Hub.Config({
@@ -10,7 +10,7 @@ MathJax.Hub.Config({
     },
     tex2jax: {
     inlineMath: [ ['$', '$'] ],
-    displayMath: [ ['$$', '$$'] ],
+    displayMath: [ ['$$', '$$'],  ["\\[","\\]"]],
     processEscapes: true,
   }
 });
