Comment "Do not remove gtag.js to keep verified"

--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -4,6 +4,9 @@
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
+ <!--
+ To stay verified by Google search console, do not remove gtag.js tracking code.
+  -->
 
   gtag('config', '{{ site.google_analytics }}');
 </script>
