--- a/_sass/hamilton/layout.scss
+++ b/_sass/hamilton/layout.scss
@@ -323,9 +323,11 @@ ul.social-icons {
   flex: 1 0 auto;
   overflow-y: scroll;
 
+  /*
   // Hide scrollbar for IE, Edge and Firefox
   -ms-overflow-style: none;  // IE and Edge
   scrollbar-width: none;     // Firefox
+  */
 
   padding-left: $spacing-unit;
   padding-right: $spacing-unit;
